# oboro

./: .dockerignore  .gitignore  .kata.toml  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.ner  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml  release-notes.md
.github/DISCUSSION_TEMPLATE/: q-a.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml
.github/actions/setup-git-user/: action.yml
.github/workflows/: check.yml  deploy.yml  docker.yml  ghcr-cleanup.yml  release.yml
docs/: 404.qmd  _brand.yml  _quarto.yml  changelog.qmd  confidentiality.qmd  configuration.qmd  development.qmd  docker.qmd  how-it-works.qmd  index.qmd  install.sh  limitations.qmd  quickstart.qmd  reference.qmd
docs/_extensions/mcanouil/gitlink/: _extension.yml  _schema.yml  gitlink.lua
docs/assets/: _shared.scss  _tokens.scss  placeholders.js  theme-dark.scss  theme-light.scss  theme.scss
docs/assets/scripts/: a11y-fixes.html  github-widget.html  navbar-tooltips.html  placeholders.html
examples/: effbench.rs
src/: config.rs  lib.rs  main.rs  models.rs  pipeline.rs  vault.rs  walk.rs
src/convert/: docx.rs  mod.rs  ocr.rs  pdf.rs  xlsx.rs
src/detect/: merge.rs  mod.rs  ner.rs  rules.rs
src/review/: mod.rs  ui.rs
testdata/: README.md  clients.csv  clients.tsv  clients.xlsx  contract.docx  contract.txt  hush.toml  letterhead.docx  oboro.toml
tests/: cli.rs  leak.rs
tests/support/: mod.rs  xlsx_builder.rs
