[package]
name = "oboro"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
description = "Local anonymisation layer between raw files and large language models"
license = "MIT"
repository = "https://github.com/mcanouil/oboro"
readme = "README.md"
keywords = ["privacy", "anonymisation", "pii", "redaction", "llm"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
aes-gcm = "0.11.0"
anyhow = "1.0.104"
blake3 = "1.8.5"
clap = { version = "4.6.2", features = ["derive"] }
dirs = "6.0.0"
phonenumber = "0.3.10"
rand = "0.10.2"
regex = "1.13.1"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.229", features = ["derive"] }
thiserror = "2.0.19"
toml = "1.1.3"
zeroize = { version = "1.9.0", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
proptest = "1.11.0"
tempfile = "3.27.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
